--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+     <p><a href="index.html">Go back</a></p>
+    <button type="button" data-start>Start</button>
+    <button type="button" data-stop>Stop</button>
     <script src="js/01-color-switcher.js" type="module"></script>
 </body>
 </html>
