--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   <title>Promise</title>
+    <link rel="stylesheet" href="css/common.css" />
 </head>
 <body>
+  <p><a href="index.html">Go back</a></p>
     <form class="form">
   <label>
     First delay (ms)
